tests/ui/feature-gates/feature-gate-decl_macro.stderr
error[E0658]: `macro` is experimental
  --> $DIR/feature-gate-decl_macro.rs:3:1
   |
LL | macro m() {}
   | ^^^^^^^^^^^^
   |
   = note: see issue #39412 <https://github.com/crablang/crablang/issues/39412> for more information
   = help: add `#![feature(decl_macro)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
